various fixes #1 (aside, span wrapping divs, input -> button, ul margins, main article button transition-duration)

--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -123,7 +123,8 @@ footer .upper{
     box-sizing: border-box;
 }
 
-.newsletter-form input[type = "submit"]{
+.newsletter-form button[type = "submit"]{
+    top: 0;
     position: absolute;
     right: 0;
     width: 10rem;
@@ -136,6 +137,7 @@ footer .upper{
     font-size: 14px;
     background-color: #0f8040;
     cursor: pointer;
+    align-items: center;
 }
 
 .lower{
